# KAUVOY-AI2025

./: .gitattributes  README.md
Decision/ch/: 0217_20:42_kau_WGS84.txt  0217_21:33_kau_WGS84.txt  0217_21:33_kau_waypoints(half_straight).kml  0217_21:38_kau_UTM.txt  0217_21:38_kau_WGS84.txt  0217_21:38_kau_waypoints(round_trip_straight).kml  waypointlog_0.5.py
Decision/gps_ws/: 0217_21:33_kau_UTM.txt  0219_22:16_kau_UTM.txt  0219_22:16_kau_UTM_visual.txt  0219_22:37_kau_UTM.txt  0219_22:37_kau_UTM_v.txt  frames.gv  gps_ui.py  kalman.py  odomcheck.py  playground.txt  pure pursuit 매뉴얼  visualizer.py  waypointlog.py
Decision/gps_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Decision/gps_ws/src/GPS_Package/: 240209_kau.txt  250210_kau.txt  final.txt
Decision/gps_ws/src/erp_driver/: control_auto.py  control_steer.py
Local/sensor_ws/: circle.bag  good.bag  straight.bag  straight_circle.bag
Local/sensor_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Local/sensor_ws/src/erp_driver/: README.md  control_auto.py  control_steer_auto.py
Local/sensor_ws/src/imu_calibration/: CMakeLists.txt  package.xml
Local/sensor_ws/src/odom_encoder/: CMakeLists.txt  odom_encoder(Origin).py  package.xml
Local/sensor_ws/src/robot_localization/: test_rviz.rviz
Local/sensor_ws/src/test/: package.xml
Local/sensor_ws/src/timestamp/: CMakeLists.txt
Track Race/manual/: TrackRace_Lidar 매뉴얼
Track Race/track_ws/devel/: .catkin  local_setup.sh  setup.sh
Vision/vision_backup/: Origin
Vision/vision_backup/catkin_ws/ch/: best_homography.pkl  homography_center_right.npy  homography_left_center.npy  test  test.cpp
Vision/vision_backup/catkin_ws/cw_devel_bin/: stitch_delay_ros.py
Vision/vision_backup/vission_ws/src/: stitch_panorama.py
Vision/vision_backup/vission_ws/src/camera_lidar_fusion/: CMakeLists.txt  package.xml
Vision/vision_backup/vission_ws/src/camera_lidar_fusion/launch/: fusion(origin).launch  fusion.launch  multicam.launch
Vision/vision_backup/vission_ws/src/camera_lidar_fusion/launch/original/: fusion(origianl).launch  fusion(param2).launch
Vision/vision_backup/vission_ws/src/camera_lidar_fusion/src/: fusion_node.cpp
Vision/vision_backup/vs_ws/3cam_homo_n_stitching/: cal_right.py  stitch_delay.py
Vision/vision_backup/vs_ws/devel/: .catkin  .rosinstall  local_setup.sh  (+1 more)
(+944 files in other folders)
